test/descriptor/seman/corr10.v3
//@seman = DescriptorError @ 16:30
// DA
// | \
// DB  DC
class DA describes A { }
class DB extends DA describes B { }
class DC extends DA describes C { }  // DC is a sibling of DB, not a subtype

// A
// |
// B
// |
// C
class A descriptor DA { }
class B extends A descriptor DB { }
class C extends B descriptor DC { }  // error: DC must be a subtype of DB
